@@ -2,6 +2,7 @@ Release Notes - Clusterd - Version 1.11.0-0.6.1
 -----------------------------------------------
 
   * FIX: Missing mesos-agent metrics when using cgroupsv2.
+  * ADD: Support for docker container metrics under cgroupsv2.
 
 
 Release Notes - Clusterd - Version 1.11.0-0.6.0
